--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -45,7 +45,14 @@ footer{
 }
 
 .fundo-confirmados{
-    background: url('../img/restaurant_icons.png');
+    background: url('../img/NascerdoSolOpacity.jpg')  no-repeat center; /*fixed; -> fica ruim em mobile*/
+    background-size: cover;
+    /*background-repeat: no-repeat;
+    background-size:cover;*/
+    /*background-clip: padding-box;*/
+    /*background-clip: content-box;*/
+    /*opacity: 0.5;*/
+    /*background-image: linear-gradient(135deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../img/NascerdoSol.jpg");*/
 }
 
 .fundo-levar{
@@ -131,9 +138,9 @@ footer{
 }
 
 span img{
-    padding: 0em;
-    width: 4em;
-    height: 4em;
+    margin-top: 0.5em;
+    width: 3em;
+    height: 3em;
 }
 
 .badge-container {
