Ajustando tamanho das fotos

--- a/views/default/home.html
+++ b/views/default/home.html
@@ -36,7 +36,7 @@
                 <a class="navbar-brand" href="{{=URL('home')}}">Primos do Sítio</a>
                 <span class="badge-container">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                <img src="{{=URL('static','img/20151019_153658205_iOS.jpg')}}" alt="Perfil do Usuário" class="avatar img-circle"></a>
+                <img src="{{=URL('static','img/AmauriPerfil.jpg')}}" alt="Perfil do Usuário" class="avatar img-circle"></a>
                 <a href="{{=URL('home')}}"><span class="badge">15</span></a>
 
                 <ul class="dropdown-menu">
@@ -94,16 +94,16 @@
 
                         <div class="carousel-inner" role="listbox">
                             <div class="item active">
-                                <img src="{{=URL('static','imgPrimos/01.jpeg')}}" class="img-responsive" alt="Imagem Slider 1">
+                                <img src="{{=URL('static','imgPrimos/01.jpg')}}" class="img-responsive" alt="Imagem Slider 1">
                             </div>
                             <div class="item">
-                                <img src="{{=URL('static','imgPrimos/02.jpeg')}}" class="img-responsive" alt="Imagem Slider 2">
+                                <img src="{{=URL('static','imgPrimos/02.jpg')}}" class="img-responsive" alt="Imagem Slider 2">
                             </div>
                             <div class="item">
-                                <img src="{{=URL('static','imgPrimos/03.jpeg')}}" class="img-responsive" alt="Imagem Slider 2">
+                                <img src="{{=URL('static','imgPrimos/03.jpg')}}" class="img-responsive" alt="Imagem Slider 2">
                             </div>
                             <div class="item">
-                                <img src="{{=URL('static','imgPrimos/04.jpeg')}}" class="img-responsive" alt="Imagem Slider 2">
+                                <img src="{{=URL('static','imgPrimos/04.jpg')}}" class="img-responsive" alt="Imagem Slider 2">
                             </div>
                         </div>
 
